Ran SATDBailiff with older version of remove duplicates after fetching data (WIP)